--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -8682,7 +8682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -8728,16 +8728,16 @@
    "source": [
     "results = []\n",
     "\n",
-    "# Itera sobre os DataFrames de treino e teste\n",
+    "\n",
     "for index in range(len(train)):\n",
-    "    model = Ridge()  # Muda para Ridge Regression\n",
+    "    model = Ridge()  \n",
     "    train_df = train[index]\n",
     "    \n",
-    "    # Ajusta o modelo com o conjunto de treino e a variável target\n",
-    "    model.fit(train_df, y_train) \n",
-    "    y_test_pred = model.predict(test[index])  # Faz previsões no conjunto de teste correspondente\n",
     "    \n",
-    "    # Calcula as métricas de avaliação\n",
+    "    model.fit(train_df, y_train) \n",
+    "    y_test_pred = model.predict(test[index]) \n",
+    "    \n",
+    "  \n",
     "    results.append(\n",
     "        {\n",
     "            'index': index,\n",
@@ -8748,18 +8748,18 @@
     "        }\n",
     "    )\n",
     "\n",
-    "# Ordena os resultados pelo RMSE para identificar o melhor modelo\n",
+    "\n",
     "results = sorted(results, key=lambda x: x['RMSE'])\n",
     "best_ind = results[0]['index']\n",
     "best_df_train = results[0]['df_train']\n",
     "\n",
-    "# Exibe os resultados\n",
+    "\n",
     "results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -8772,26 +8772,24 @@
     }
    ],
    "source": [
-    "# Modelos de regularização a serem testados\n",
     "models = {\n",
     "    \"Ridge\": Ridge(),\n",
     "    \"Lasso\": Lasso(),\n",
     "}\n",
     "\n",
-    "# Dicionário para armazenar resultados para cada modelo\n",
     "results = {model_name: [] for model_name in models.keys()}\n",
     "\n",
-    "# Itera sobre cada modelo de regularização\n",
+    "\n",
     "for model_name, model in models.items():\n",
-    "    # Itera sobre os DataFrames de treino e teste\n",
+    "    \n",
     "    for index in range(len(train)):\n",
     "        train_df = train[index]\n",
     "        \n",
-    "        # Ajusta o modelo com o conjunto de treino e a variável target\n",
-    "        model.fit(train_df, y_train)\n",
-    "        y_test_pred = model.predict(test[index])  # Faz previsões no conjunto de teste correspondente\n",
     "        \n",
-    "        # Calcula as métricas de avaliação\n",
+    "        model.fit(train_df, y_train)\n",
+    "        y_test_pred = model.predict(test[index]) \n",
+    "        \n",
+    "        \n",
     "        results[model_name].append(\n",
     "            {\n",
     "                'index': index,\n",
@@ -8802,13 +8800,12 @@
     "            }\n",
     "        )\n",
     "\n",
-    "# Identifica e exibe o melhor resultado para cada modelo\n",
     "for model_name, model_results in results.items():\n",
-    "    # Ordena os resultados pelo RMSE para identificar o melhor modelo\n",
-    "    model_results = sorted(model_results, key=lambda x: x['RMSE'])\n",
-    "    best_result = model_results[0]  # O melhor resultado com base no menor RMSE\n",
     "    \n",
-    "    # Exibe os resultados do melhor DataFrame para o modelo atual\n",
+    "    model_results = sorted(model_results, key=lambda x: x['RMSE'])\n",
+    "    best_result = model_results[0]  \n",
+    "    \n",
+    "    \n",
     "    print(f\"The best dataframe for the {model_name} model is {best_result['df_train']}, \"\n",
     "          f\"with a MAE of {best_result['MAE']}, \"\n",
     "          f\"a RMSE of {best_result['RMSE']}, and \"\n",
