optimization done -> complete

--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -6628,7 +6628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [
     {
@@ -6670,9 +6670,7 @@
     "best_results.sort(key=lambda x: x[\"RMSE\"])\n",
     "best_model = best_results[0]\n",
     "\n",
-    "print(f\"The best model is {best_model['Model']} using {best_model['DataFrame']}, \"\n",
-    "      f\"with a MAE of {best_model['MAE']}, RMSE of {best_model['RMSE']}, \"\n",
-    "      f\"and R2_score of {best_model['R2_score']}.\")\n"
+    "print(f\"The best model is {best_model['Model']} using {best_model['DataFrame']}, with a MAE of {best_model['MAE']}, RMSE of {best_model['RMSE']}, and R2_score of {best_model['R2_score']}.\")\n"
    ]
   },
   {
