ridge model added. final statement- changed.

--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -3342,13 +3342,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Statements"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 521,
    "metadata": {},
@@ -4651,7 +4644,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**5.4 SPLI TRAIN/TEST OF 2 DATAFRAMES: WITH AND WITHOUT OUTLIERS**"
+    "**5.4 SPLIT TRAIN/TEST OF 2 DATAFRAMES: WITH AND WITHOUT OUTLIERS**"
    ]
   },
   {
